@@ -1,3 +1,5 @@
+	* fixed udp tracker race condition
+	* fixed error handling with torrents with invalid piece sizes
 	* added support for torrents with odd piece sizes
 	* fixed issue with disk read cache not being cleared when removing torrents
 	* made the DHT socket bind to the same interface as the session
